tests/fixtures/fail/inherent_variant_associated_conflict.sali
let Choice = enum {
  Answer,
}

extend Choice {
  let Answer = 42
}

let main(): i32 = 0
